src/css/base.css
:root {
	font-size: 1rem;
	font-family: 'Open Sans';
	--text-primary: #b6b6b6;
	--text-secondary: #ececec;
	--bg-primary: #23232e;
	--bg-secondary: #141418;
	--transition-speed: 600ms;

	--b-bg-primary: #3e3e51;
}

body {
	color: black;
	background-color: var(--b-bg-primary);
	margin: 0;
	padding: 0;
}

body::-webkit-scrollbar {
	width: 0.25rem;
}

body::-webkit-scrollbar-track {
	background: #1e1e24;
}

body::-webkit-scrollbar-thumb {
	background: #6649b8;
}

main {
	height: 100vh;
	width: 100vw;

	/* z-index: 1; */

	margin-left: 5rem;
	background-color: var(--b-bg-primary);
}

.dark {
	--text-primary: #3f3c3c;
	--text-secondary: #ececec;
	--bg-primary: #23232e;
	--bg-secondary: #141418;

	--b-bg-primary: #3e3e51;
}

.light {
	--text-primary: #1f1f1f;
	--text-secondary: #000000;
	--bg-primary: #ffffff;
	--bg-secondary: #e4e4e4;

	--b-bg-primary: #ffffff;
}

.solar {
	--text-primary: #576e75;
	--text-secondary: #35535c;
	--bg-primary: #fdf6e3;
	--bg-secondary: #f5e5b8;

	--b-bg-primary: #e3daaa;
}


@media only screen and (max-width: 600px) {
	main {
		margin: 0;
	}
}

